client/clmrpc: extend the SubmitOrder response to include the order nonce
This'll let clients/UIs track the new order by nonce, which can be
useful for looking up later. We'll also use this in the itests to write
more assertions about expected order states.
